[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/enemies/Enemy001.gd" type="Script" id=1]
[ext_resource path="res://textures/flower.png" type="Texture" id=2]

[node name="Enemy001" type="Node2D" groups=["Boss", "Enemy"]]
pause_mode = 1
z_index = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="Rotater" type="Node2D" parent="."]

[node name="ShootTimer" type="Timer" parent="."]

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="tween_move_down" type="Tween" parent="."]

[node name="tween_move_up" type="Tween" parent="."]

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="tween_completed" from="tween_move_down" to="." method="_on_tween_move_down_tween_completed"]
[connection signal="tween_completed" from="tween_move_up" to="." method="_on_tween_move_up_tween_completed"]
